fixed chevrons and scrollbar styling!

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 /* HTML, body, heading */
+
 @layer base {
+  html{
+    @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-red-600;
+  }
+
   body {
-    @apply bg-[#141414] text-white !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
+    @apply bg-[#141414] text-white overflow-x-hidden;
   }
 
   header {
